--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,9 @@ body {
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 h1 {
@@ -27,6 +30,7 @@ h1 {
     display: flex;
     justify-content: center;
     margin-bottom: 20px;
+    width: 100%;
 }
 
 .tab-link {
@@ -39,7 +43,7 @@ h1 {
     color: white;
     transition: background 0.3s;
     flex: 1;
-    font-size: 1.5em;    
+    font-size: 1.5em;
 }
 
 .tab-link:hover {
@@ -47,16 +51,20 @@ h1 {
 }
 
 .tab-link-comida {
-    background: #d9534f;
+    background: #1e3d59;
 }
 
-.tab-link-comida:hover {
-    background: #b52b27;
+.tab-link-bebida {
+    background: #1e3d59;
 }
 
+.tab-selected {
+    background: #d9534f !important;
+}
 
 .tab-content {
     display: none;
+    width: 100%;
 }
 
 .tab-content.active {
@@ -68,10 +76,11 @@ h1 {
     justify-content: space-between;
     align-items: center;
     margin: 10px 0;
-    padding: 10px;
+    padding: 5px;
     background: #f9f9f9;
     border: 1px solid #ddd;
     border-radius: 4px;
+    width: 100%;
 }
 
 .product-name {
@@ -90,18 +99,17 @@ h1 {
 }
 
 .product-controls input {
-    width: 60px;
+    width: 50px;
     text-align: center;
     margin: 0 10px;
     border: 1px solid #ddd;
     border-radius: 4px;
     padding: 5px;
-    font-size: 1em;
+    font-size: 1.5em;
+    font-weight: bold;
 }
 
 .product-controls button {
-    background: #1e3d59;
-    color: white;
     border: none;
     padding: 10px;
     cursor: pointer;
@@ -111,16 +119,18 @@ h1 {
     min-width: 40px;
 }
 
+.button-zero {
+    background: #1e3d59;
+    color: white;
+}
+
+.button-nonzero {
+    background: #d9534f;
+    color: white;
+}
+
 .product-controls button:hover {
     background: #162a40;
-}
-
-.product-controls .button-comida {
-    background: #d9534f;
-}
-
-.product-controls .button-comida:hover {
-    background: #b52b27;
 }
 
 .total {
@@ -149,28 +159,3 @@ h1 {
 #reset-button:hover {
     background: #b52b27;
 }
-
-/* @media (max-width: 600px) {
-    .container {
-        width: 100%;
-        padding: 10px;
-    }
-    
-    .product-controls input {
-        width: 40px;
-        margin: 0 5px;
-        padding: 3px;
-        font-size: 0.9em;
-    }
-    
-    .product-controls button {
-        padding: 10px;
-        font-size: 0.9em;
-    }
-    
-    .tab-link {
-        padding: 15px;
-        font-size: 0.9em;
-    }
-    
-} */
